added icons & improved on structure

--- a/styles/themes/default/_colors.sass
+++ b/styles/themes/default/_colors.sass
@@ -1,9 +1,9 @@
-$alpha: #445FF8
-$beta: #0A2533
-$gamma: #011E2E
-$delta: #F7F8FC
-$epsilon: #16191B
-$zeta: #fff
+$alpha: #445ff8
+$beta: #0a2533
+$gamma: #011e2e
+$delta: #f7f8fc
+$epsilon: #16191b
+$zeta: #adb7be
 $eta: #fff
 $theta: #fff
 $iota: #fff
