--- a/styles/base/_globals.sass
+++ b/styles/base/_globals.sass
@@ -21,6 +21,7 @@ html, body
     font-size: 0.9rem
   @include m.media(desktop)
     font-size: 1rem
+  background: #333
 
 html
   box-sizing: border-box
