added web manifest & generated icons & improved structure

--- a/styles/base/_globals.sass
+++ b/styles/base/_globals.sass
@@ -8,7 +8,7 @@
   box-sizing: inherit
 
 html, body
-  overflow-x: hidden
+  // overflow-x: hidden
   @include m.media(phone)
     font-size: 1rem
   // font-size: 3vmin
@@ -16,16 +16,19 @@ html, body
   // font-size: 1.5rem
   // font-size: 2vw
   @include m.media(tablet)
-    font-size: 1.2rem
+    // font-size: 1.2rem
+    font-size: 1rem
   @include m.media(laptop)
-    font-size: 0.9rem
+    // font-size: 0.9rem
+    font-size: 1rem
   @include m.media(desktop)
     font-size: 1rem
+  line-height: 120%
   background: #333
 
 html
   box-sizing: border-box
-  font-family: Stem, sans-serif
+  font-family: Mont, sans-serif
   // scroll-behavior: smooth
 
 h1
@@ -38,47 +41,32 @@ svg
 a, button
   cursor: pointer
 
-a, button
-  outline: f.px(1) solid transparent
-  outline-offset: f.px(-1)
-  transition: outline-offset .25s ease-out, outline-color .25s ease-out
-  &:focus-visible
-    outline-offset: f.px(4)
-    @include m.dye(outline, c.$nu)
+// a, button
+//   outline: f.px(1) solid transparent
+//   outline-offset: f.px(-1)
+//   transition: outline-offset .25s ease-out, outline-color .25s ease-out
+//   &:focus-visible
+//     outline-offset: f.px(4)
+//     @include m.dye(outline, c.$nu)
 
-input
-  border: f.px(2) solid transparent
-  &:focus-visible
-    border: f.px(2) solid 
-    @include m.dye(border, c.$beta)
+// input
+//   border: f.px(2) solid transparent
+//   &:focus-visible
+//     border: f.px(2) solid 
+//     @include m.dye(border, c.$beta)
 
 section
   @include m.media(phone, tablet)
-    @include m.gap($pb: f.px(50))
+    padding-bottom: f.px(50)
   @include m.media(laptop, desktop)
-    @include m.gap($pb: f.px(115))
-    overflow: hidden
-// body
-//   background-color: #333
-
-.swiper-container
-  overflow: visible
-
-.swiper-wrapper
-  width: max-content
-
-.swiper-slide
-  height: auto
-
-.swiper-container-horizontal > .swiper-pagination-bullets
-  bottom: f.px(-20)
-
-.swiper-pagination-bullet-active
-  background-color: c.$beta
+    padding-bottom: f.px(115)
+    // overflow: hidden
 
 html #nprogress .bar 
-  background: c.$beta
+  @include m.dye(bg, c.$alpha)
+  // background: c.$alpha
 
 html #nprogress .spinner-icon 
-  border-top-color: c.$beta
-  border-left-color: c.$beta
+  @include m.dye(border, c.$alpha)
+  // border-top-color: c.$alpha
+  // border-left-color: c.$alpha
