--- a/styles/themes/default/_colors.sass
+++ b/styles/themes/default/_colors.sass
@@ -4,7 +4,7 @@ $gamma: #011e2e
 $delta: #f7f8fc
 $epsilon: #16191b
 $zeta: #adb7be
-$eta: #fff
+$eta: #2d2d2d
 $theta: #fff
 $iota: #fff
 $kappa: #fff
