--- a/styles/base/_typo.sass
+++ b/styles/base/_typo.sass
@@ -12,8 +12,16 @@
 @font-face
   font-display: swap
   font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-SemiBold.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-SemiBold.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-SemiBold.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-SemiBold.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-SemiBold.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-SemiBold.woff2) format('woff2')
+  font-style: normal
+  font-weight: 700
+
+@font-face
+  font-display: swap
+  font-family: Mont
   src: local(Mont), url(/assets/fonts/mont/eot/Mont-Bold.eot)
-  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Bold.eot?iefix) format('embedded-opentype'), url(/assets/fonts/mont/ttf/Mont-Bold.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Bold.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Bold.woff2) format('woff2')
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Bold.eot?iefix) format('embedded-opentype'), url(/assets/fonts/mont/otf/Mont-SemiBold.otf) format('opentype'), url(/assets/fonts/mont/ttf/Mont-Bold.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Bold.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Bold.woff2) format('woff2')
   font-style: normal
   font-weight: 700
 
