added full typo for mont

--- a/styles/base/_typo.sass
+++ b/styles/base/_typo.sass
@@ -12,10 +12,50 @@
 @font-face
   font-display: swap
   font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Hairline.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Hairline.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-Hairline.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-Hairline.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Hairline.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Hairline.woff2) format('woff2')
+  font-style: normal
+  font-weight: 100
+
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Thin.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Thin.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-Thin.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-Thin.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Thin.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Thin.woff2) format('woff2')
+  font-style: normal
+  font-weight: 200
+
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Light.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Light.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-Light.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-Light.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Light.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Light.woff2) format('woff2')
+  font-style: normal
+  font-weight: 300
+
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Book.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Book.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-Book.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-Book.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Book.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Book.woff2) format('woff2')
+  font-style: normal
+  font-weight: 400
+
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Regular.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Regular.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-Regular.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-Regular.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Regular.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Regular.woff2) format('woff2')
+  font-style: normal
+  font-weight: 500
+
+@font-face
+  font-display: swap
+  font-family: Mont
   src: local(Mont), url(/assets/fonts/mont/eot/Mont-SemiBold.eot)
   src: local(Mont), url(/assets/fonts/mont/eot/Mont-SemiBold.eot?iefix) format('embedded-opentype'),url(/assets/fonts/mont/otf/Mont-SemiBold.otf) format('opentype'),  url(/assets/fonts/mont/ttf/Mont-SemiBold.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-SemiBold.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-SemiBold.woff2) format('woff2')
   font-style: normal
-  font-weight: 700
+  font-weight: 600
 
 @font-face
   font-display: swap
@@ -25,3 +65,18 @@
   font-style: normal
   font-weight: 700
 
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Heavy.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Heavy.eot?iefix) format('embedded-opentype'), url(/assets/fonts/mont/otf/Mont-SemiBold.otf) format('opentype'), url(/assets/fonts/mont/ttf/Mont-Heavy.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Heavy.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Heavy.woff2) format('woff2')
+  font-style: normal
+  font-weight: 800
+
+@font-face
+  font-display: swap
+  font-family: Mont
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Black.eot)
+  src: local(Mont), url(/assets/fonts/mont/eot/Mont-Black.eot?iefix) format('embedded-opentype'), url(/assets/fonts/mont/otf/Mont-SemiBold.otf) format('opentype'), url(/assets/fonts/mont/ttf/Mont-Black.ttf) format('truetype'), url(/assets/fonts/mont/woff/Mont-Black.woff) format('woff'), url(/assets/fonts/mont/woff2/Mont-Black.woff2) format('woff2')
+  font-style: normal
+  font-weight: 900
