added more pages & navigation & improved structure

--- a/styles/components/general/Logo.module.sass
+++ b/styles/components/general/Logo.module.sass
@@ -5,11 +5,14 @@
 .container
   display: flex
   align-items: center
+  max-width: f.px(149)
 
 .logo
+  min-width: f.px(52)
   margin-right: f.px(9)
 
 .title
   font-size: f.px(23)
+  font-weight: 700
   margin-bottom: 0
   @include m.dye(c, c.$eta)
