--- a/styles/components/layout/Wrapper.module.sass
+++ b/styles/components/layout/Wrapper.module.sass
@@ -1,3 +1,11 @@
 @use '@/styles/utils/mixin' as m
 @use '@/styles/utils/funcs' as f
 @use '@/styles/themes/default/colors' as c
+
+.container
+  width: 100%
+  padding-left: f.px(15)
+  padding-right: f.px(15)
+  @include m.media(laptop, desktop)
+    max-width: f.px(1290)
+    margin: 0 auto
