--- a/styles/themes/default/_colors.sass
+++ b/styles/themes/default/_colors.sass
@@ -5,7 +5,7 @@ $delta: #f7f8fc
 $epsilon: #16191b
 $zeta: #adb7be
 $eta: #2d2d2d
-$theta: #fff
+$theta: #262626
 $iota: #fff
 $kappa: #fff
 $lambda: #fff
