more layout is done

--- a/styles/themes/default/_colors.sass
+++ b/styles/themes/default/_colors.sass
@@ -6,7 +6,7 @@ $epsilon: #16191b
 $zeta: #adb7be
 $eta: #2d2d2d
 $theta: #262626
-$iota: #fff
+$iota: #73767e
 $kappa: #fff
 $lambda: #fff
 $mu: #fff
