--- a/styles/base/_globals.sass
+++ b/styles/base/_globals.sass
@@ -8,7 +8,7 @@
   box-sizing: inherit
 
 html, body
-  // overflow-x: hidden
+  overflow-x: hidden
   @include m.media(phone)
     font-size: 1rem
   // font-size: 3vmin
