--- a/styles/components/images/hero/ImgHero.module.sass
+++ b/styles/components/images/hero/ImgHero.module.sass
@@ -1,7 +1,4 @@
 @use '@/styles/utils/mixin' as m
 @use '@/styles/utils/funcs' as f
 @use '@/styles/themes/default/colors' as c
-
-.container
-  @include m.dye(bg, c.$epsilon)
-  @include m.dye(c, c.$omega)
+@use '@/styles/utils/mixin/media' as bp
