--- a/styles/components/sections/Hero.module.sass
+++ b/styles/components/sections/Hero.module.sass
@@ -12,7 +12,7 @@
 
 .carousel
   & > *:nth-child(1)
-    overflow: visible
+    overflow: visible !important
     & > div
       overflow: visible
     & button:nth-last-child(1)
@@ -30,5 +30,5 @@
       width: f.px(40)
       background-color: #333 !important
 
-.slider-wrapper.axis-horizontal
-  overflow: visible
+// .slider-wrapper.axis-horizontal
+//   overflow: visible
