finished form in Footer

--- a/styles/components/icons/IconRectangle.module.sass
+++ b/styles/components/icons/IconRectangle.module.sass
@@ -6,6 +6,11 @@
   // @include m.sizeIcon($w: 684, $h: 684)
   @include m.flex
   // margin: f.px(10, em)
-  &.zeta
+  &.alpha
     & rect
       @include m.dye(fill, c.$alpha)
+  &.epsilon
+    & rect
+      @include m.dye(fill, c.$epsilon)
+  &.o01
+    opacity: 0.1
