more layout is done

--- a/styles/components/forms/FormLearnMore.module.sass
+++ b/styles/components/forms/FormLearnMore.module.sass
@@ -66,6 +66,7 @@
   transform: translateX(f.px(-60))
   @include m.dye(bg, c.$epsilon)
   @include m.dye(c, c.$omega)
+  cursor: pointer
 
 .personaldata
   position: relative
