--- a/styles/components/layout/Footer.module.sass
+++ b/styles/components/layout/Footer.module.sass
@@ -5,6 +5,7 @@
 .container
   @include m.dye(bg, c.$epsilon)
   @include m.dye(c, c.$omega)
+  margin-top: f.px(394)
   padding-bottom: f.px(70)
 
 .wrapper
@@ -15,8 +16,8 @@
 .form
   position: relative
   z-index: 1
-  margin-top: f.px(-250)
-  margin-bottom: f.px(89)
+  margin-bottom: f.px(-199)
+  transform: translateY(f.px(-288))
 
 .top
   display: flex
