--- a/styles/components/carousel/CarouselItemHero.module.sass
+++ b/styles/components/carousel/CarouselItemHero.module.sass
@@ -11,6 +11,19 @@
 .left
   flex-basis: 50%
 
+.label
+  display: inline-block
+  margin-bottom: f.px(37)
+  padding: f.px(10) f.px(20)
+  border: f.px(1) solid
+  @include m.dye(border, c.$lambda)
+  border-radius: f.px(30)
+  font-size: f.px(13)
+  line-height: 120%
+  letter-spacing: f.px(0.2, em)
+  text-transform: uppercase
+  @include m.dye(c, rgba(c.$gamma, .5))
+
 .title
   margin-bottom: f.px(6)
   font-size: f.px(64)
@@ -19,9 +32,29 @@
   @include m.dye(c, c.$gamma)
 
 .description
+  margin-bottom: f.px(36)
   font-size: f.px(18)
   line-height: 140%
   @include m.dye(c, c.$iota)
+
+.btn
+  display: inline-block
+  margin-bottom: f.px(106)
+  margin-right: f.px(44)
+  padding: f.px(23) f.px(44)
+  border-radius: f.px(34)
+  font-size: f.px(18)
+  font-weight: 600
+  line-height: 120%
+  @include m.dye(bg, c.$beta)
+  @include m.dye(c, c.$omega)
+
+.btnAlt
+  display: inline-block
+  margin-bottom: f.px(106)
+  font-size: f.px(18)
+  line-height: 140%
+  @include m.dye(c, rgba(c.$iota, .9))
 
 .right
   flex-basis: 50%
